--- a/src/components/Customer/MtoShipmentForm/MtoShipmentForm.module.scss
+++ b/src/components/Customer/MtoShipmentForm/MtoShipmentForm.module.scss
@@ -1,8 +1,9 @@
 // HHG details form
 
-@import '../../../shared/styles/basics';
-@import '../../../shared/styles/mixins';
-@import '../../../shared/styles/colors';
+@import 'shared/styles/_variables';
+@import 'shared/styles/basics';
+@import 'shared/styles/colors';
+@import 'shared/styles/mixins';
 
 .HHGDetailsForm {
   h1 {
@@ -42,5 +43,53 @@
         @include u-padding-left('05');
       }
     }
+  }
+}
+
+@media (max-width: $mobile) {
+  .hhg-label {
+    background-color: #aacdec;
+    width: 51px;
+    text-align: center;
+  }
+
+  .remarks {
+    height: 100px;
+    resize: vertical;
+  }
+
+  .cancel-button {
+    background-color: transparent;
+    color: #0050d8;
+    text-decoration: none;
+    margin: 0;
+    padding-bottom: 0;
+    padding-top: 0;
+    height: 42px;
+  }
+
+  .small-bold {
+    font-size: 13px;
+    font-weight: bold;
+  }
+
+  .hhg-examples-container {
+    padding: 15px;
+    border-radius: 4px;
+    border: 1px solid $base-lighter;
+    background-color: $bg-gray;
+    font-size: 13px;
+    & ul {
+      padding: 0;
+      list-style-position: inside;
+      margin: 0;
+    }
+  }
+
+  .legend-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 21px;
   }
 }
