--- a/src/components/Customer/MtoShipmentForm/MtoShipmentForm.module.scss
+++ b/src/components/Customer/MtoShipmentForm/MtoShipmentForm.module.scss
@@ -1,9 +1,9 @@
 // HHG details form
 
+@import '../../../shared/styles/basics';
+@import '../../../shared/styles/mixins';
 @import 'shared/styles/_variables';
-@import 'shared/styles/basics';
 @import 'shared/styles/colors';
-@import 'shared/styles/mixins';
 
 .HHGDetailsForm {
   h1 {
