adds correct grey to subsection header border

--- a/src/components/Customer/Review/ShipmentCard/ShipmentCard.module.scss
+++ b/src/components/Customer/Review/ShipmentCard/ShipmentCard.module.scss
@@ -77,7 +77,7 @@
   }
 
   .subsectionHeader {
-    border-top: 1px solid $base-light;
+    border-top: 1px solid $base-lighter;
     @include u-margin-top('105');
     @include u-padding-top('05');
 
