overrides the change to the color of the disabled selectable card component label to stay in alignment with the MMDS guidelines

--- a/src/components/Customer/SelectableCard.module.scss
+++ b/src/components/Customer/SelectableCard.module.scss
@@ -15,6 +15,9 @@
   :global(.usa-radio__label) {
     font-weight: bold;
   }
+  :global(.usa-radio__input:disabled + .usa-radio__label) {
+    color: $base-darkest;
+  }
 }
 
 .cardTitle {
