--- a/src/pages/MyMove/index.module.scss
+++ b/src/pages/MyMove/index.module.scss
@@ -1,8 +1,16 @@
 @import '../../shared/styles/basics';
 @import '../../shared/styles/mixins';
 @import '../../shared/styles/colors';
+@import '../../shared/styles/_variables';
 
 .gridContainer:global(.grid-container) {
   max-width: 800px;
   padding: 0;
+}
+
+@media (max-width: $mobile) {
+    .small-bold {
+    font-size: 13px;
+    font-weight: bold;
+  }
 }
