--- a/src/components/Customer/SectionWrapper.module.scss
+++ b/src/components/Customer/SectionWrapper.module.scss
@@ -15,8 +15,13 @@
       @include u-padding-top(0);
       @include u-margin-top(0);
     }
+    hr {
+      color: $base-lightest;
+    }
     h2, h3, h4 {
+      &:first-child {
       @include u-margin-top(0);
+      }
     }
   }
 }
