removes 3d effect from hr

--- a/src/components/Customer/SectionWrapper.module.scss
+++ b/src/components/Customer/SectionWrapper.module.scss
@@ -19,6 +19,7 @@
       color: $base-lighter;
       background-color: $base-lighter;
       height: 1px;
+      border: 0;
     }
     h2, h3, h4 {
       &:first-child {
