updates weight page to inlcude sectionwrapper component

--- a/src/scenes/Moves/Ppm/Weight.module.scss
+++ b/src/scenes/Moves/Ppm/Weight.module.scss
@@ -12,8 +12,12 @@ form > h2 {
   margin-top: 1em;
 }
 
-.info > h3 {
+.info > h2 {
   margin-top: 0;
+}
+
+h2 {
+  margin-bottom: 16px;
 }
 
 div.slider-container {
