--- a/src/components/ShipmentTag/ShipmentTag.module.scss
+++ b/src/components/ShipmentTag/ShipmentTag.module.scss
@@ -1,8 +1,13 @@
 @import 'shared/styles/colors';
 @import 'shared/styles/_basics';
+@import 'shared/styles/_mixins';
 
 .ShipmentTag {
   background-color: $accent-default;
+  display: inline-block;
+  line-height: 1.3;
+  @include u-padding-y(0);
+
   &.HHG {
     background-color: $accent-hhg;
   }
