--- a/src/shared/Hint/index.module.scss
+++ b/src/shared/Hint/index.module.scss
@@ -1,10 +1,13 @@
+@import 'shared/styles/_basics';
+@import 'shared/styles/_mixins';
 @import 'shared/styles/_variables';
 @import 'shared/styles/colors';
 
-@media (max-width: $mobile) {
-  .hint {
-    font-size: 13px;
-    font-weight: normal;
-    color: $base;
-  }
+.hint,
+.hint p {
+  color: $base;
+  font-size: 13px;
+  line-height: 18px;
+  @include u-margin-top('105');
+  @include u-margin-bottom(0);
 }
