--- a/src/components/Customer/MtoShipmentForm/MtoShipmentForm.module.scss
+++ b/src/components/Customer/MtoShipmentForm/MtoShipmentForm.module.scss
@@ -87,50 +87,25 @@
   }
 }
 
-@media (max-width: $mobile) {
-  .hhg-label {
-    background-color: #aacdec;
-    width: 51px;
-    text-align: center;
-  }
+.remarks {
+  height: 100px;
+  resize: vertical;
+}
 
-  .remarks {
-    height: 100px;
-    resize: vertical;
-  }
+.remarksExamples {
+  color: $base;
+  @include u-margin-y('105');
+  @include u-padding(2);
+  border-radius: 4px;
+  border: 1px solid $base-lighter;
+  background-color: $bg-gray;
+  font-size: 13px;
+  line-height: 18px;
 
-  .cancel-button {
-    background-color: transparent;
-    color: #0050d8;
-    text-decoration: none;
+  ul {
+    color: $base;
+    list-style-position: inside;
+    padding: 0;
     margin: 0;
-    padding-bottom: 0;
-    padding-top: 0;
-    height: 42px;
-  }
-
-  .small-bold {
-    font-size: 13px;
-    font-weight: bold;
-  }
-
-  .hhg-examples-container {
-    padding: 15px;
-    border-radius: 4px;
-    border: 1px solid $base-lighter;
-    background-color: $bg-gray;
-    font-size: 13px;
-    & ul {
-      padding: 0;
-      list-style-position: inside;
-      margin: 0;
-    }
-  }
-
-  .legend-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 21px;
   }
 }
