--- a/src/components/Customer/SectionWrapper.module.scss
+++ b/src/components/Customer/SectionWrapper.module.scss
@@ -3,8 +3,8 @@
 @import 'shared/styles/_variables.scss';
 @import 'shared/styles/_basics.scss';
 
+.sectionWrapper {
   @media (min-width: $tablet) {
-  .sectionWrapper {
     @include u-bg('white');
     @include u-radius('05');
     @include u-border('base-lighter');
@@ -21,9 +21,11 @@
       height: 1px;
       border: 0;
     }
-    h2, h3, h4 {
+    h2,
+    h3,
+    h4 {
       &:first-child {
-      @include u-margin-top(0);
+        @include u-margin-top(0);
       }
     }
   }
