--- a/src/components/ShipmentTag/ShipmentTag.module.scss
+++ b/src/components/ShipmentTag/ShipmentTag.module.scss
@@ -5,8 +5,16 @@
 .ShipmentTag {
   background-color: $accent-default;
   display: inline-block;
+  font-size: 13px;
   line-height: 1.3;
   @include u-padding-y(0);
+
+  @include at-media('tablet') {
+    font-size: 16px;
+    line-height: 1;
+    @include u-padding-y(0.5);
+    @include u-padding-x(1);
+  }
 
   &.HHG {
     background-color: $accent-hhg;
