removes extra space above pickup date legend on desktop

--- a/src/components/Customer/MtoShipmentForm/MtoShipmentForm.module.scss
+++ b/src/components/Customer/MtoShipmentForm/MtoShipmentForm.module.scss
@@ -32,9 +32,17 @@
       @include u-margin-bottom(1);
     }
 
-    .usa-fieldset {
-      @include u-padding-top(2);
+    @media (max-width: $tablet) {
+      .usa-fieldset {
+        @include u-padding-top(2);
+      }
     }
+
+    @media (min-width: $tablet) {
+    .usa-legend {
+      @include u-margin-top(0);
+    }
+  }
 
     .usa-hint {
       @include u-font-size('body', '3xs');
