--- a/src/components/Customer/SectionWrapper.module.scss
+++ b/src/components/Customer/SectionWrapper.module.scss
@@ -11,7 +11,8 @@
     @include u-border('1px');
     @include u-padding(5);
     @include u-margin-bottom(4);
-    fieldset {
+    .usa-fieldset,
+    .usa-legend {
       @include u-padding-top(0);
       @include u-margin-top(0);
     }
@@ -21,7 +22,9 @@
       height: 1px;
       border: 0;
     }
-    h2, h3, h4, legend {
+    h2,
+    h3,
+    h4 {
       &:first-child {
       @include u-margin-top(0);
       }
