Fix legend styling in Safari

--- a/src/components/Customer/MtoShipmentForm/MtoShipmentForm.module.scss
+++ b/src/components/Customer/MtoShipmentForm/MtoShipmentForm.module.scss
@@ -30,12 +30,14 @@
   }
 
   legend {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     width: 100%;
-
     @include typeset('body', 9, 2);
+
+    .legendContent {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
   }
 
   legend + :global(.usa-form-group .usa-label) {
