--- a/src/components/Table/Filters/MultiSelectCheckBoxFilter.module.scss
+++ b/src/components/Table/Filters/MultiSelectCheckBoxFilter.module.scss
@@ -4,15 +4,23 @@
 
 .MultiSelectCheckBoxFilterWrapper {
   @include u-radius(0);
+  @include u-padding-top(1);
+  @include u-font-weight(normal);
+  @include u-font-size('body', 4);
 
   label {
     @include u-margin-y(.5);
   }
 
+  :global .MultiSelectCheckBoxFilter__placeholder {
+    color: $base-darkest;
+  }
+
   :global .MultiSelectCheckBoxFilter__control {
+    height: 2.5rem;
     @include u-radius(0);
     @include u-minw(15);
-    max-width: 183px;
+    max-width: 200px;
     border-color: $base-darkest;
   }
 
@@ -68,7 +76,7 @@
   }
 
   :global .MultiSelectCheckBoxFilter__indicator svg{
-    @include u-height(1.5);
-    @include u-width(1.5);
+    height: .7rem;
+    width: .7rem;
   }
 }
