Fixed filter generation to be on separate row

--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -32,5 +32,21 @@
       color: $base-darker;
       @include u-text('bold');
     }
+
+    .tableHeaderFilters {
+      background-color: $base-lighter;
+
+      th {
+        @include u-bg('transparent')
+      }
+
+      &:hover {
+        background-color: $base-lighter;
+
+        th {
+          @include u-bg('transparent')
+        }
+      }
+    }
   }
 }
