--- a/src/components/Customer/MtoShipmentForm/MtoShipmentForm.module.scss
+++ b/src/components/Customer/MtoShipmentForm/MtoShipmentForm.module.scss
@@ -31,6 +31,8 @@
 
   legend {
     width: 100%;
+    max-width: none;
+    @include u-text('bold');
     @include typeset('body', 9, 2);
 
     .legendContent {
@@ -139,7 +141,7 @@ p + .radioGroup {
     // 42px tall touch area
     padding-top: 10px;
     padding-bottom: 10px;
-    margin-bottom: 0;
+    @include u-margin-y(0);
   }
 }
 
