--- a/src/components/Table/Filters/MultiSelectCheckBoxFilter.module.scss
+++ b/src/components/Table/Filters/MultiSelectCheckBoxFilter.module.scss
@@ -2,81 +2,83 @@
 @import 'shared/styles/_mixins';
 @import 'shared/styles/colors';
 
-.MultiSelectCheckBoxFilterWrapper {
-  @include u-radius(0);
-  @include u-padding-top(1);
-  @include u-font-weight(normal);
-  @include u-font-size('body', 4);
-
-  label {
-    @include u-margin-y(.5);
-  }
-
-  :global .MultiSelectCheckBoxFilter__placeholder {
-    color: $base-darkest;
-  }
-
-  :global .MultiSelectCheckBoxFilter__control {
-    height: 2.5rem;
+:global {
+  :local(.MultiSelectCheckBoxFilterWrapper) {
     @include u-radius(0);
-    @include u-minw(15);
-    max-width: 200px;
-    border-color: $base-darkest;
-  }
+    @include u-padding-top(1);
+    @include u-font-weight(normal);
+    @include u-font-size('body', 4);
 
-  :global .MultiSelectCheckBoxFilter__control:hover {
-    border-color: $base-darkest;
-  }
+    label {
+      @include u-margin-y(.5);
+    }
 
-  :global .MultiSelectCheckBoxFilter__control--is-focused {
-    box-shadow: none;
-    border-color: $base-darkest;
-    outline: .25rem solid #2491ff !important;
-    outline-offset: 0;
-  }
+    .MultiSelectCheckBoxFilter__placeholder {
+      color: $base-darkest;
+    }
 
-  :global .MultiSelectCheckBoxFilter__menu {
-    @include u-margin-top(.5);
-    @include u-radius(0);
-    max-width: 183px;
-  }
+    .MultiSelectCheckBoxFilter__control {
+      height: 2.5rem;
+      @include u-radius(0);
+      @include u-minw(15);
+      max-width: 200px;
+      border-color: $base-darkest;
+    }
 
-  :global .MultiSelectCheckBoxFilter__value-container {
-    @include u-height(2.5);
-  }
+    .MultiSelectCheckBoxFilter__control:hover {
+      border-color: $base-darkest;
+    }
 
-  :global .MultiSelectCheckBoxFilter__value-container div {
-    overflow: hidden;
-    //text-overflow: ellipsis;
-    white-space: nowrap;
-  }
+    .MultiSelectCheckBoxFilter__control--is-focused {
+      box-shadow: none;
+      border-color: $base-darkest;
+      outline: .25rem solid #2491ff !important;
+      outline-offset: 0;
+    }
 
-   :global .MultiSelectCheckBoxFilter__value-container div span + span:before{
-    content: ", ";
-  }
+    .MultiSelectCheckBoxFilter__menu {
+      @include u-margin-top(.5);
+      @include u-radius(0);
+      max-width: 183px;
+    }
 
-  :global .MultiSelectCheckBoxFilter__indicator-separator {
-    display: none;
-  }
+    .MultiSelectCheckBoxFilter__value-container {
+      @include u-height(2.5);
+    }
 
-  :global .MultiSelectCheckBoxFilter__option {
-    border: 2px solid $base-darkest;
-    border-left: 0;
-    border-right: 0;
-    background-color: white;
-    color: $base-darkest
-  }
+    .MultiSelectCheckBoxFilter__value-container div {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
 
-  :global .MultiSelectCheckBoxFilter__option:not(:first-child), :global .MultiSelectCheckBoxFilter__option:first-child {
-    border-top: 0;
-  }
+    .MultiSelectCheckBoxFilter__value-container div span + span:before {
+      content: ", ";
+    }
 
-  :global .MultiSelectCheckBoxFilter__option:last-child {
-    border-bottom: 0;
-  }
+    .MultiSelectCheckBoxFilter__indicator-separator {
+      display: none;
+    }
 
-  :global .MultiSelectCheckBoxFilter__indicator svg{
-    height: .7rem;
-    width: .7rem;
+    .MultiSelectCheckBoxFilter__option {
+      border: 2px solid $base-darkest;
+      border-left: 0;
+      border-right: 0;
+      background-color: white;
+      color: $base-darkest
+    }
+
+    .MultiSelectCheckBoxFilter__option:not(:first-child), :global .MultiSelectCheckBoxFilter__option:first-child {
+      border-top: 0;
+    }
+
+    .MultiSelectCheckBoxFilter__option:last-child {
+      border-bottom: 0;
+    }
+
+    .MultiSelectCheckBoxFilter__indicator svg {
+      height: .7rem;
+      width: .7rem;
+    }
   }
 }
