replace arrow-both with font awesome

--- a/src/components/Table/Filters/MultiSelectCheckBoxFilter.module.scss
+++ b/src/components/Table/Filters/MultiSelectCheckBoxFilter.module.scss
@@ -77,8 +77,9 @@
     }
 
     .MultiSelectCheckBoxFilter__indicator svg {
-      height: .7rem;
-      width: .7rem;
+      color: $base-darker;
+      height: .9rem;
+      width: .9rem;
     }
   }
 }
