removes extra space above text on selectablecard

--- a/src/components/Customer/SelectableCard.module.scss
+++ b/src/components/Customer/SelectableCard.module.scss
@@ -18,6 +18,9 @@
   :global(.usa-radio__input:disabled + .usa-radio__label) {
     color: $base-darkest;
   }
+  :global(.usa-radio__label) {
+    @include u-margin-top(0);
+  }
 }
 
 .cardTitle {
