--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -37,7 +37,9 @@
       background-color: $base-lighter;
 
       th {
-        @include u-bg('transparent')
+        @include u-bg('transparent');
+        @include u-padding-top(0);
+        @include u-padding-bottom(1);
       }
 
       &:hover {
