styling pagination bar

--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -52,49 +52,53 @@
     }
   }
 
-   .paginationSectionWrapper {
-     display: flex;
-     flex-wrap: wrap;
-     justify-content: space-between;
+.inlineBlock {
+  display: inline-block
+}
 
-       .paginationTableWrapper {
-        margin: 20px;
-        min-width: 173px;
-        code {
-          font-size: 12px;
-          color: $base-darkest;
-        }
-       }
+.paginationSectionWrapper {
+ display: flex;
+ flex-wrap: wrap;
+ justify-content: space-between;
+ flex-grow: 1;
 
-      .tableControlRowsPerPage {
-        display: flex;
-        align-items: center;
-        .usaSelect {
-          width: 89px;
-          height: 38px;
-          @include u-margin(0);
-          @include u-margin-right('105');
-        }
+   .paginationTableWrapper {
+    margin: 20px;
+    min-width: 173px;
+      font-size: 12px;
+      color: $base-darkest;
+    }
+  }
+
+
+  .tableControlRowsPerPage {
+    display: flex;
+    align-items: center;
+    .usaSelect {
+      width: 89px;
+      height: 38px;
+      @include u-margin(0);
+      @include u-margin-right('105');
+    }
+  }
+
+  .tableControlPagination {
+    display: flex;
+    align-items: center;
+    @include u-margin-y(1);
+    .usaSelect {
+      width: 89px;
+      height: 38px;
+      @include u-margin(0);
+      @include u-margin-x('105');
+    }
+
+    .usaButtonUnstyled {
+      @include u-margin(0);
+      @include u-padding-x(0);
+      .icon {
+        @include u-padding-left('05');
       }
-
-      .tableControlPagination {
-        display: flex;
-        align-items: center;
-        @include u-margin-y(1);
-        .usaSelect {
-          width: 89px;
-          height: 38px;
-          @include u-margin(0);
-          @include u-margin-x('105');
-        }
-
-        .usaButtonUnstyled {
-          @include u-margin(0);
-          @include u-padding-x(0);
-          .icon {
-            @include u-padding-left('05');
-          }
-        }
     }
   }
 }
