--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -1,5 +1,6 @@
 @import 'shared/styles/_basics';
 @import 'shared/styles/_mixins';
+@import 'shared/styles/_overrides';
 @import 'shared/styles/colors';
 
 .Table {
@@ -56,46 +57,44 @@
   display: inline-block
 }
 
+.displayFlex {
+  justify-content: space-between;
+}
+
 .paginationSectionWrapper {
- display: flex;
- flex-wrap: wrap;
- justify-content: space-between;
- flex-grow: 1;
-
-   .paginationTableWrapper {
-    margin: 20px;
-    min-width: 173px;
-    }
-  }
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+   flex-grow: 1;
+   margin: 20px;
+   min-width: 173px;
 
 
-  .tableControlRowsPerPage {
-    display: flex;
-    align-items: center;
-    .usaSelect {
-      width: 89px;
-      height: 38px;
-      @include u-margin(0);
-      @include u-margin-right('105');
-    }
-  }
+    .tableControlPagination {
+      display: flex;
+      align-items: center;
+      @include u-margin-y(1);
+      .usaSelect {
+        @include u-margin(0);
+        @include u-margin-x('105');
+      }
+      .usa-button--unstyled {
+        @include u-margin(0);
+        @include u-padding-x(0);
+        .fas {
+          @include u-padding-left('05');
+        }
+      }
+     }
 
-  .tableControlPagination {
-    display: flex;
-    align-items: center;
-    @include u-margin-y(1);
-    .usaSelect {
-      width: 89px;
-      height: 38px;
-      @include u-margin(0);
-      @include u-margin-x('105');
-    }
-
-    .usaButtonUnstyled {
-      @include u-margin(0);
-      @include u-padding-x(0);
-      .icon {
-        @include u-padding-left('05');
+    .tableControlRowsPerPage {
+      display: flex;
+      align-items: center;
+      .usaSelect {
+        width: 89px;
+        height: 38px;
+        @include u-margin(0);
+        @include u-margin-right('105');
       }
     }
   }
