--- a/src/pages/MyMove/Home/Home.module.scss
+++ b/src/pages/MyMove/Home/Home.module.scss
@@ -7,6 +7,10 @@
   max-width: 64rem;
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+
+  .secondaryBtn {
+    box-shadow: inset 0 0 0 2px $primary;
+  }
 }
 
 .customer-header {
