--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -1,6 +1,6 @@
 @import 'shared/styles/_basics';
 @import 'shared/styles/_mixins';
-@import 'shared/styles/_overrides';
+// @import 'shared/styles/_overrides';
 @import 'shared/styles/colors';
 
 .Table {
@@ -65,36 +65,41 @@
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
-   flex-grow: 1;
    margin: 20px;
-   min-width: 173px;
-
 
     .tableControlPagination {
       display: flex;
       align-items: center;
-      @include u-margin-y(1);
-      .usaSelect {
-        @include u-margin(0);
-        @include u-margin-x('105');
+      flex-grow: 1;
+      justify-content: flex-end;
+
+      .usaButtonUnstyled {
+        @include u-bg('transparent');
+        @include u-text('primary-vivid');
+        @include u-text('no-underline');
+        @include u-padding(1);
+        @include u-margin-top(1);
+        @include u-margin-x(0);
+        @include u-margin-bottom(0);
       }
-      .usa-button--unstyled {
-        @include u-margin(0);
-        @include u-padding-x(0);
-        .fas {
-          @include u-padding-left('05');
-        }
+
+      .usaSelect {
+        width: unset;
       }
      }
 
     .tableControlRowsPerPage {
       display: flex;
       align-items: center;
+      flex-grow: 1;
+
       .usaSelect {
-        width: 89px;
-        height: 38px;
-        @include u-margin(0);
-        @include u-margin-right('105');
+        width: unset;
+      }
+
+      div {
+         @include u-padding(1);
+         @include u-margin-top(1);
       }
     }
   }
