--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -81,7 +81,12 @@
         @include u-margin-top(1);
         @include u-margin-x(0);
         @include u-margin-bottom(0);
+
+        &:disabled {
+          @include u-text('base-light');
+        }
       }
+
 
       .usaSelect {
         width: unset;
