--- a/src/components/Customer/Home/Helper/Helper.module.scss
+++ b/src/components/Customer/Home/Helper/Helper.module.scss
@@ -8,7 +8,6 @@
 
   @include u-padding-y(2);
   @include u-padding-x(1);
-  @include u-margin-bottom(4);
 
   @include at-media('desktop') {
     @include u-padding(3);
@@ -31,6 +30,14 @@
       @include u-margin-top(1);
     }
   }
+}
+
+.Helper + .Helper {
+  @include u-margin-top(1.5);
+}
+
+.Helper + *:not(.Helper) {
+  @include u-margin-top(4);
 }
 
 .header {
