Use WizardNav in MTO shipment edit form

--- a/src/components/Customer/WizardNavigation/WizardNavigation.module.scss
+++ b/src/components/Customer/WizardNavigation/WizardNavigation.module.scss
@@ -5,7 +5,8 @@
   display: flex;
   flex-wrap: wrap;
 
-  button {
+  button,
+  :global(.usa-button) {
     // Reset button margins
     margin: 0;
     flex-grow: 1;
