--- a/src/scenes/Office/office.scss
+++ b/src/scenes/Office/office.scss
@@ -25,6 +25,14 @@
 }
 
 .icon {
+  margin: 0 0.5em 0 0.3em;
+}
+
+.icon-right {
+  margin: 0 0.5em 0 0.3em;
+}
+
+.icon-left {
   margin: 0 0.3em 0 0.5em;
 }
 
