--- a/src/scenes/Office/office.scss
+++ b/src/scenes/Office/office.scss
@@ -28,11 +28,11 @@
   margin: 0 0.5em 0 0.3em;
 }
 
-.icon-right {
+.pagination-icon-right {
   margin: 0 0.5em 0 0.3em;
 }
 
-.icon-left {
+.pagination-icon-left {
   margin: 0 0.3em 0 0.5em;
 }
 
