--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -4,11 +4,13 @@
 
 .Table {
   min-height: 300px;
+
   table {
     width: 100%;
     @include u-font('body', 'xs');
     color: $base-darkest;
     border-collapse: collapse;
+
     td,
     th {
       @include u-padding-y(1.5);
@@ -20,6 +22,7 @@
       @include u-border('base-lighter');
       @include u-minw(1)
     }
+
     tr {
       &:hover {
         background-color: rgb(217, 231, 247);
@@ -29,6 +32,7 @@
         }
       }
     }
+
     th {
       color: $base-darker;
       @include u-text('bold');
@@ -53,15 +57,17 @@
     }
   }
 
-.paginationSectionWrapper {
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: space-between;
-   margin: 20px;
+  .paginationSectionWrapper {
+    @include u-margin-y(2);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 
-  .paginationSelect {
-    width: unset;
-  }
+    .paginationSelect {
+      @include u-margin-x(0.5);
+      width: unset;
+    }
+
     .tableControlPagination {
       display: flex;
       align-items: center;
@@ -69,28 +75,40 @@
       justify-content: flex-end;
 
       .pageControlButton {
-        font-weight: bold;
         @include u-bg('transparent');
         @include u-text('primary-vivid');
         @include u-text('no-underline');
         @include u-padding(1);
         @include u-margin-top(1);
-        @include u-margin-x(0);
+        @include u-margin-x(1);
         @include u-margin-bottom(0);
+        display: flex;
+        align-items: center;
 
-        .paginationIconRight {
-          margin: 0 0.5em 0 0.3em;
+        &.pageControlButtonPrev {
+          @include u-padding-left(0);
+
+          .paginationIconLeft {
+            @include u-margin-left(0);
+            @include u-margin-right(0.5);
+          }
         }
 
-        .paginationIconLeft {
-          margin: 0 0.3em 0 0.5em;
+        &.pageControlButtonNext {
+          @include u-padding-right(0);
+
+          .paginationIconRight {
+            @include u-margin-right(0);
+            @include u-margin-left(0.5);
+          }
         }
+
 
         &:disabled {
           @include u-text('base-light');
         }
       }
-     }
+    }
 
     .tableControlRowsPerPage {
       display: flex;
@@ -98,8 +116,8 @@
       flex-grow: 1;
 
       div {
-         @include u-padding(1);
-         @include u-margin-top(1);
+        @include u-padding(1);
+        @include u-margin-top(1);
       }
     }
   }
