--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -3,11 +3,12 @@
 @import 'shared/styles/colors';
 
 .Table {
+  @include u-margin-x(1);
   min-height: 300px;
 
   table {
-    width: 100%;
     @include u-font('body', 'xs');
+    width: 100%;
     color: $base-darkest;
     border-collapse: collapse;
 
@@ -64,7 +65,7 @@
     justify-content: space-between;
 
     .paginationSelect {
-      @include u-margin-x(0.5);
+      @include u-margin-x(0);
       width: unset;
     }
 
@@ -80,13 +81,13 @@
         @include u-text('no-underline');
         @include u-padding(1);
         @include u-margin-top(1);
-        @include u-margin-x(1);
         @include u-margin-bottom(0);
         display: flex;
         align-items: center;
 
         &.pageControlButtonPrev {
           @include u-padding-left(0);
+          @include u-margin-right(1.5);
 
           .paginationIconLeft {
             @include u-margin-left(0);
@@ -96,6 +97,7 @@
 
         &.pageControlButtonNext {
           @include u-padding-right(0);
+          @include u-margin-left(1.5);
 
           .paginationIconRight {
             @include u-margin-right(0);
