changes color of service item cards accept and reject icons

--- a/src/components/Office/ReviewServiceItems/ServiceItemCard.module.scss
+++ b/src/components/Office/ReviewServiceItems/ServiceItemCard.module.scss
@@ -106,11 +106,11 @@
     }
 
     .statusApproved svg {
-      fill: $success;
+      color: $success;
     }
 
     .statusRejected svg {
-      fill: $error;
+      color: $error;
     }
 
     .rejectionReason {
