MB-4656 replace weight allowance placeholder with actual weight allowance

--- a/pkg/notifications/templates/move_submitted_template.html
+++ b/pkg/notifications/templates/move_submitted_template.html
@@ -14,14 +14,14 @@
 </p>
 
 <p>
-  <strong>Your weight allowance: [weight allowance] pounds</strong>
+  <strong>Your weight allowance: {{.TotalWeightSelf}} pounds</strong>
   That’s how much the government will pay to ship for you on this move. You won’t owe anything if all your shipments
   combined weigh less than that.
 </p>
 
 <p>
-  If you move more than [weight allowance] pounds, you will owe the government the difference between that and the total
-  amount you move.
+  If you move more than {{.TotalWeightSelf}} pounds, you will owe the government the difference between that and the
+  total amount you move.
 </p>
 
 <p>
