MB-4656 add missing comma and add PpmLink to moveSubmittedEmailData struct

--- a/pkg/notifications/templates/move_submitted_template.html
+++ b/pkg/notifications/templates/move_submitted_template.html
@@ -32,9 +32,7 @@
 <p>
   <strong>For PPM (DITY, or do-it-yourself) shipments</strong>
   If you chose to do a full or partial PPM (DITY) move,
-  <a href="https://office.staging.move.mil/downloads/ppm_info_sheet.pdf">
-    review the Personally Procured Move (PPM) info sheet</a
-  >
+  <a href="{{.PpmLink}}"> review the Personally Procured Move (PPM) info sheet</a>
   for detailed instructions.
 </p>
 <ul>
@@ -61,11 +59,11 @@
 
 <p>
   Once you’ve completed your PPM shipment, you can request payment by
-  <a href="https://my.move.mil/">logging in to MilMove</a>.
+  <a href="{{.Link}}">logging in to MilMove</a>.
 </p>
 
 <p>
-  <strong> For HHG and other government-funded shipments</strong>
+  <strong>For HHG and other government-funded shipments</strong>
 </p>
 
 <p>Next steps:</p>
