Add flexbox to grow height for calendar date picker is not cutoff

--- a/src/components/Table/TableQueue.module.scss
+++ b/src/components/Table/TableQueue.module.scss
@@ -3,7 +3,13 @@
 @import '../../shared/styles/colors';
 
 .TableQueue {
+  @include u-display(flex);
+  flex-direction: column;
+  flex: auto;
+
   .tableContainer {
+    flex: auto;
+
     @include u-margin-top(1);
     max-width: 100%;
     overflow-x: auto;
