MB-4656 replace placeholder

--- a/pkg/notifications/templates/move_submitted_template.html
+++ b/pkg/notifications/templates/move_submitted_template.html
@@ -14,13 +14,13 @@
 </p>
 
 <p>
-  <strong>Your weight allowance: weightPlaceholder pounds</strong>
+  <strong>Your weight allowance: {{.WeightAllowance}} pounds</strong>
   That’s how much the government will pay to ship for you on this move. You won’t owe anything if all your shipments
   combined weigh less than that.
 </p>
 
 <p>
-  If you move more than weightPlaceholder pounds, you will owe the government the difference between that and the
+  If you move more than {{.WeightAllowance}} pounds, you will owe the government the difference between that and the
   total amount you move.
 </p>
 
