--- a/src/components/Table/Filters/MultiSelectCheckBoxFilter.module.scss
+++ b/src/components/Table/Filters/MultiSelectCheckBoxFilter.module.scss
@@ -10,7 +10,7 @@
     @include u-font-size('body', 4);
 
     label {
-      @include u-margin-y(.5);
+      @include u-margin-y(0.5);
     }
 
     .MultiSelectCheckBoxFilter__placeholder {
@@ -32,14 +32,13 @@
     .MultiSelectCheckBoxFilter__control--is-focused {
       box-shadow: none;
       border-color: $base-darkest;
-      outline: .25rem solid #2491ff !important;
+      outline: 0.25rem solid #2491ff !important;
       outline-offset: 0;
     }
 
     .MultiSelectCheckBoxFilter__menu {
-      @include u-margin-top(.5);
+      @include u-margin-top(0.5);
       @include u-radius(0);
-      max-width: 183px;
     }
 
     .MultiSelectCheckBoxFilter__value-container {
@@ -53,7 +52,7 @@
     }
 
     .MultiSelectCheckBoxFilter__value-container div span + span:before {
-      content: ", ";
+      content: ', ';
     }
 
     .MultiSelectCheckBoxFilter__indicator-separator {
@@ -71,6 +70,7 @@
         display: flex;
         align-items: center;
         padding-left: 0;
+        text-indent: unset;
       }
 
       .usa-checkbox label:before {
@@ -79,7 +79,8 @@
       }
     }
 
-    .MultiSelectCheckBoxFilter__option:not(:first-child), :global .MultiSelectCheckBoxFilter__option:first-child {
+    .MultiSelectCheckBoxFilter__option:not(:first-child),
+    :global .MultiSelectCheckBoxFilter__option:first-child {
       border-top: 0;
     }
 
@@ -89,8 +90,8 @@
 
     .MultiSelectCheckBoxFilter__indicator svg {
       color: $base-darker;
-      height: .9rem;
-      width: .9rem;
+      height: 0.9rem;
+      width: 0.9rem;
     }
   }
 }
