--- a/src/components/Customer/Home/Contact/Contact.module.scss
+++ b/src/components/Customer/Home/Contact/Contact.module.scss
@@ -1,7 +1,7 @@
 @import 'shared/styles/colors';
 @import 'shared/styles/_basics';
 
-.contact-container {
+.contactContainer {
   border-radius: 5px;
   border: 1px solid $base-lighter;
   @include u-padding-top(2);
@@ -21,12 +21,12 @@
     margin: 0px;
   }
 
-  p:nth-child(3) {
+  p + p {
     margin-top: 12px;
   }
 }
 
-.contact-header {
+.contactHeader {
   @include u-margin-bottom(1);
   text-transform: uppercase;
 }
