Reorder setFlashMessage params

--- a/src/pages/MyMove/Home/Home.module.scss
+++ b/src/pages/MyMove/Home/Home.module.scss
@@ -12,6 +12,11 @@
   .secondaryBtn {
     box-shadow: inset 0 0 0 2px $primary;
   }
+
+  > :global(.usa-alert) {
+    @include u-margin-top('205');
+    @include u-margin-bottom(2);
+  }
 }
 
 .customer-header {
